--- a/business-2/css/custom.css
+++ b/business-2/css/custom.css
@@ -42,30 +42,31 @@ p1 {
     max-width: 80%;
     font-size: 18px;
     font-weight: 300;
-    color: rgba(255,255,255,.7);
+    color: rgba(255,255,255,.8);
 }
-.chevron {
-  position: relative;
-  top: 100px;
-  text-align: center;
-  padding: 12px;
-  margin-bottom: 6px;
-  height: 60px;
-  width: 200px;
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
-  transform: rotate(90deg);
+p2 {
+
+    line-height: 1.5;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 10px;
+    margin-bottom: 5px;
+
+    font-size: 22px;
+    font-weight: 600;
+    color: rgba(255,255,255);
 }
+
 input[type=number] {
     width: 75%;
-    padding: 12px 20px;
+    padding: 3px 22px;
     margin: 8px 0;
     box-sizing: border-box;
-    border: 2px solid grey;
+    border: 2px solid rgb(154, 205, 50, .6);
     border-radius: 25px;
-    background-color: rgba(255,255,255,.7);
+    background-color: rgba(255,255,255,.15);
+    font-size: 30px;
+    text-align: center;
 
 }
 header {
@@ -112,7 +113,16 @@ header .header-content .header-content-inner p {
       width: 300px;
       background-color: #fff;
       position: relative;
-      margin-top: 200px;
+      margin-top: 180px;
+      margin-right: auto;
+      margin-left: auto;
+    }
+    .rectangle2 {
+      height: 250px;
+      width: 300px;
+      background-color: #fff;
+      position: relative;
+      margin-top: 30px;
       margin-right: auto;
       margin-left: auto;
     }
@@ -140,8 +150,9 @@ header .header-content .header-content-inner p {
     header .header-content .header-content-inner p {
         margin-right: auto;
         margin-left: auto;
-        max-width: 80%;
+        max-width: 90%;
         font-size: 18px;
+        margin-top:20px;
     }
 }
 
@@ -274,6 +285,7 @@ header .header-content .header-content-inner p {
     .navbar-default { /*Style for the navbar and outline*/
         border-color: rgba(255,255,255,.3);
         background-color: transparent;
+        background-color: rgba(50,50,50,.9);
     }
 
     .navbar-default .navbar-header .navbar-brand { /*Style for the logo*/
@@ -299,7 +311,7 @@ header .header-content .header-content-inner p {
     /*Style for navbar scrolled down (lower navbar)*/
     .navbar-default.affix {
         border-color: #fff;
-        background-color: #fff;
+        background-color: rgba(255,255,255,.9);
         box-shadow: 0px 7px 20px 0px rgba(0,0,0,0.1); /*lower navbar shadow*/
     }
 
@@ -323,6 +335,13 @@ header .header-content .header-content-inner p {
         color: yellowgreen;
     }
 }
+textarea:focus, input:focus{
+    outline: none;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    display: none;
+  }
 
 .btn-default {
     border-color: #fff;
